code_gen/src/autogen/gmarParser.py
# Generated from /home/eugene/workspace/Code/PyProjects/code_gen/gmar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class gmarParser ( Parser ):

    grammarFileName = "gmar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'while'", "'do'", "'if'", "'else'", "'='", 
                     "'System.out.println'", "'break'", "'continue'", "'return'", 
                     "','", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", 
                     "'.'", "'length'", "'this'", "'new'", "'int'", "'char'", 
                     "'boolean'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LINE_COMMENT", 
                      "COMMENT", "INTEGER", "BOOLEAN", "CHAR", "SEMICOLON", 
                      "IDENTIFIER", "WS" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_mainMethod = 2
    RULE_classBody = 3
    RULE_classDecl = 4
    RULE_methodDecl = 5
    RULE_fieldDecl = 6
    RULE_identifier = 7
    RULE_methodBody = 8
    RULE_statement = 9
    RULE_returnStatement = 10
    RULE_paramList = 11
    RULE_parameters = 12
    RULE_parameter = 13
    RULE_expression = 14
    RULE_conjunction = 15
    RULE_equality = 16
    RULE_comparison = 17
    RULE_sigma = 18
    RULE_product = 19
    RULE_factor = 20
    RULE_atom = 21
    RULE_methodCall = 22
    RULE_integral = 23
    RULE_boolean = 24
    RULE_character = 25
    RULE_vartype = 26
    RULE_integralType = 27
    RULE_integralArrayType = 28
    RULE_characterType = 29
    RULE_booleanType = 30

    ruleNames =  [ "program", "mainClass", "mainMethod", "classBody", "classDecl", 
                   "methodDecl", "fieldDecl", "identifier", "methodBody", 
                   "statement", "returnStatement", "paramList", "parameters", 
                   "parameter", "expression", "conjunction", "equality", 
                   "comparison", "sigma", "product", "factor", "atom", "methodCall", 
                   "integral", "boolean", "character", "vartype", "integralType", 
                   "integralArrayType", "characterType", "booleanType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    LINE_COMMENT=43
    COMMENT=44
    INTEGER=45
    BOOLEAN=46
    CHAR=47
    SEMICOLON=48
    IDENTIFIER=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(gmarParser.MainClassContext,0)


        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(gmarParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return gmarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gmarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.mainClass()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gmarParser.T__0:
                self.state = 63
                self.classDecl()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(gmarParser.IdentifierContext,0)


        def mainMethod(self):
            return self.getTypedRuleContext(gmarParser.MainMethodContext,0)


        def getRuleIndex(self):
            return gmarParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = gmarParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gmarParser.T__0)
            self.state = 70
            self.identifier()
            self.state = 71
            self.match(gmarParser.T__1)
            self.state = 72
            self.mainMethod()
            self.state = 73
            self.match(gmarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gmarParser.IDENTIFIER, 0)

        def statement(self):
            return self.getTypedRuleContext(gmarParser.StatementContext,0)


        def getRuleIndex(self):
            return gmarParser.RULE_mainMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainMethod" ):
                listener.enterMainMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainMethod" ):
                listener.exitMainMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethod" ):
                return visitor.visitMainMethod(self)
            else:
                return visitor.visitChildren(self)




    def mainMethod(self):

        localctx = gmarParser.MainMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainMethod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(gmarParser.T__3)
            self.state = 76
            self.match(gmarParser.T__4)
            self.state = 77
            self.match(gmarParser.T__5)
            self.state = 78
            self.match(gmarParser.T__6)
            self.state = 79
            self.match(gmarParser.T__7)
            self.state = 80
            self.match(gmarParser.T__8)
            self.state = 81
            self.match(gmarParser.T__9)
            self.state = 82
            self.match(gmarParser.T__10)
            self.state = 83
            self.match(gmarParser.IDENTIFIER)
            self.state = 84
            self.match(gmarParser.T__11)
            self.state = 85
            self.match(gmarParser.T__1)
            self.state = 86
            self.statement()
            self.state = 87
            self.match(gmarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.FieldDeclContext)
            else:
                return self.getTypedRuleContext(gmarParser.FieldDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(gmarParser.MethodDeclContext,i)


        def getRuleIndex(self):
            return gmarParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = gmarParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.fieldDecl() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gmarParser.T__39) | (1 << gmarParser.T__40) | (1 << gmarParser.T__41) | (1 << gmarParser.IDENTIFIER))) != 0):
                self.state = 95
                self.methodDecl()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(gmarParser.IdentifierContext,0)


        def classBody(self):
            return self.getTypedRuleContext(gmarParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return gmarParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = gmarParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(gmarParser.T__0)
            self.state = 102
            self.identifier()
            self.state = 103
            self.match(gmarParser.T__1)
            self.state = 104
            self.classBody()
            self.state = 105
            self.match(gmarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(gmarParser.VartypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(gmarParser.IdentifierContext,0)


        def paramList(self):
            return self.getTypedRuleContext(gmarParser.ParamListContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(gmarParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return gmarParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = gmarParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.vartype()
            self.state = 108
            self.identifier()
            self.state = 109
            self.match(gmarParser.T__7)
            self.state = 110
            self.paramList()
            self.state = 111
            self.match(gmarParser.T__11)
            self.state = 112
            self.match(gmarParser.T__1)
            self.state = 113
            self.methodBody()
            self.state = 114
            self.match(gmarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(gmarParser.VartypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(gmarParser.IdentifierContext,0)


        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return gmarParser.RULE_fieldDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDecl" ):
                return visitor.visitFieldDecl(self)
            else:
                return visitor.visitChildren(self)




    def fieldDecl(self):

        localctx = gmarParser.FieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fieldDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.vartype()
            self.state = 117
            self.identifier()
            self.state = 118
            self.match(gmarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gmarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return gmarParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = gmarParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(gmarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnStatement(self):
            return self.getTypedRuleContext(gmarParser.ReturnStatementContext,0)


        def fieldDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.FieldDeclContext)
            else:
                return self.getTypedRuleContext(gmarParser.FieldDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.StatementContext)
            else:
                return self.getTypedRuleContext(gmarParser.StatementContext,i)


        def getRuleIndex(self):
            return gmarParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = gmarParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self.fieldDecl() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gmarParser.T__1) | (1 << gmarParser.T__12) | (1 << gmarParser.T__13) | (1 << gmarParser.T__14) | (1 << gmarParser.T__17) | (1 << gmarParser.T__18) | (1 << gmarParser.T__19) | (1 << gmarParser.IDENTIFIER))) != 0):
                self.state = 128
                self.statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.returnStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gmarParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(gmarParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(gmarParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(gmarParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignArrayStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(gmarParser.IdentifierContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gmarParser.ExpressionContext,i)

        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignArrayStatement" ):
                listener.enterAssignArrayStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignArrayStatement" ):
                listener.exitAssignArrayStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignArrayStatement" ):
                return visitor.visitAssignArrayStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.StatementContext)
            else:
                return self.getTypedRuleContext(gmarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(gmarParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)
        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(gmarParser.IdentifierContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatement" ):
                listener.enterAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatement" ):
                listener.exitAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class BreakStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(gmarParser.StatementContext,0)

        def expression(self):
            return self.getTypedRuleContext(gmarParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(gmarParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gmarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(gmarParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gmarParser.StatementContext)
            else:
                return self.getTypedRuleContext(gmarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = gmarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = gmarParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(gmarParser.T__1)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gmarParser.T__1) | (1 << gmarParser.T__12) | (1 << gmarParser.T__13) | (1 << gmarParser.T__14) | (1 << gmarParser.T__17) | (1 << gmarParser.T__18) | (1 << gmarParser.T__19) | (1 << gmarParser.IDENTIFIER))) != 0):
                    self.state = 137
                    self.statement()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 143
                self.match(gmarParser.T__2)
                pass

            elif la_ == 2:
                localctx = gmarParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(gmarParser.T__12)
                self.state = 145
                self.match(gmarParser.T__7)
                self.state = 146
                self.expression()
                self.state = 147
                self.match(gmarParser.T__11)
                self.state = 148
                self.statement()
                pass

            elif la_ == 3:
                localctx = gmarParser.DoWhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(gmarParser.T__13)
                self.state = 151
                self.statement()
                self.state = 152
                self.match(gmarParser.T__12)
                self.state = 153
                self.match(gmarParser.T__7)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(gmarParser.T__11)
                self.state = 156
                self.match(gmarParser.SEMICOLON)
                pass
